--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
         
         <div class="sidebar__header side-bar--mg">
             <button class="round-button icon-cross" title="Закрыть"></button>
-            <!-- <a class="logo-CPS" href="#"></a> -->
             <a class="logo-CPS" href="#"><img src="img/logo-CPS.svg"></a>
             <button class="round-button icon-search" title="Поиск"></button>
         </div>
         <nav>
             <ul class="sidebar__menu">
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#repair">Ремонт техники</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#services">Услуги и сервисы</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#clients">Корпоративным клиентам</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#sellers">Продавцам техники</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#partners">Партнерам</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#manufacturers">Производителям</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#service-centers">Наши сервисные центры</a></li>
-                <li class="sidebar__menu__line"><a class="sidebar__menu__link" href="#contacts">Контакты</a></li>
+                <li><a class="sidebar__menu__link" href="#">Ремонт техники</a></li>
+                <li><a class="sidebar__menu__link" href="#">Услуги и сервисы</a></li>
+                <li><a class="sidebar__menu__link" href="#">Корпоративным клиентам</a></li>
+                <li><a class="sidebar__menu__link" href="#">Продавцам техники</a></li>
+                <li><a class="sidebar__menu__link" href="#">Партнерам</a></li>
+                <li><a class="sidebar__menu__link" href="#">Производителям</a></li>
+                <li><a class="sidebar__menu__link" href="#">Наши сервисные центры</a></li>
+                <li><a class="sidebar__menu__link" href="#">Контакты</a></li>
             </ul>
         </nav>
         <footer class="sidebar__footer">
@@ -42,7 +41,7 @@
             <a class="sidebar__footer__mail animation-pulse" href="mailto:mail@cps.com">mail@cps.com</a>
             <a class="sidebar__footer__tel animation-pulse" href="tel:88008908900">8 800 890 8900</a>
             <div class="sidebar__footer__lang">
-                <button class="sidebar__footer__lang__link animation-pulse" title="Переключи на русский язык">RU</button>
+                <button class="sidebar__footer__lang__link animation-pulse" title="Переключить на русский язык">RU</button>
                 <button class="sidebar__footer__lang__link animation-pulse" title="Переключить на английский язык">EN</button>
                 <button class="sidebar__footer__lang__link animation-pulse" title="Переключить на китайский язык">CH</button>
             </div>
